[package]
name = "rust-async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.1"
mio = { version = "0.8.9", features = ["os-poll", "net"]}
tokio = { version = "1.34.0", features = ["full"]}
